--- a/templates/store/form/_partials/settings.html.twig
+++ b/templates/store/form/_partials/settings.html.twig
@@ -38,12 +38,10 @@
   <hr>
 {% endif %}
 {% if form.timeSlot is defined or form.timeSlots is defined or form.packageSet is defined %}
-  {% if form.timeSlots is defined %}
-    {{ form_row(form.timeSlots) }}
-  {% endif %}
-  {% if form.timeSlot is defined %}
-    {{ form_row(form.timeSlot) }}
-  {% endif %}
+<div {{ react_component('Store/TimeSlot', {
+      store: form.vars.data|serialize,
+}) }}></div>
+<hr>
   {% if form.packageSet is defined %}
     {{ form_row(form.packageSet) }}
   {% endif %}
