--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -86,6 +86,11 @@ h1, h2, h3, h4, h5, h6 {
   border: none;
   border-radius: 0;
   border-bottom: 2px solid #ecf0f1;
+
+  .nav--to-dispatch {
+    text-decoration: underline;
+    font-weight: 700;
+  }
 }
 
 .page-header {
