Use a skeleton loader.

--- a/templates/store/form/_partials/settings.html.twig
+++ b/templates/store/form/_partials/settings.html.twig
@@ -38,10 +38,11 @@
   <hr>
 {% endif %}
 {% if form.timeSlot is defined or form.timeSlots is defined or form.packageSet is defined %}
-<div {{ react_component('Store/TimeSlot', {
-      store: form.vars.data|serialize,
-}) }}></div>
-<hr>
+  <div {{ react_component('Store/TimeSlot', {
+    store: form.vars.data|serialize,
+  }) }}>
+  </div>
+  <hr>
   {% if form.packageSet is defined %}
     {{ form_row(form.packageSet) }}
   {% endif %}
