--- a/js/app/dashboard/dashboard.scss
+++ b/js/app/dashboard/dashboard.scss
@@ -181,22 +181,24 @@ html, body {
   .task-list__header {
     cursor: pointer;
     padding: 1em 0.5em;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     background-color: darken(#f5f5f5, 10%);
     border-bottom: 1px solid darken(#f5f5f5, 20%);
-    > span {
-      font-size: 16px;
-    }
+
     &:hover {
       background-color: darken(#f5f5f5, 15%);
+    }
+
+    & > div:first-child {
+      font-size: 16px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
   }
 
   .panel--group, .panel--tour {
     border-color: $main-blue-dark;
-    border-size: 2px;
+    border-width: 2px;
     margin: 4px; // so it is easier to drag tasks between tours in the dashboard panel
   }
 }
