--- a/templates/form/pricing_rule_set.html.twig
+++ b/templates/form/pricing_rule_set.html.twig
@@ -37,8 +37,8 @@
       </div>
     </div>
   </div>
-  <div class="px-3 pb-2">
-    {{ form_row(form.global) }}
+  <div class="form-inline px-3 pb-2">
+    {{ form_row(form.level) }}
   </div>
 
 {% endblock %}
