Embed logo. Fixes #4419.

--- a/templates/admin/nav.html.twig
+++ b/templates/admin/nav.html.twig
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{{ path('homepage') }}">
-        <img src="https://coopcycle.org/images/logo.svg" width="20" height="20" />
+        <img src="{{ asset('img/logo.svg') }}" width="20" height="20" />
       </a>
       <a class="navbar-brand hidden-sm hidden-xs" href="{{ path('admin_dashboard') }}">
         {% trans %}adminDashboard.title{% endtrans %}
