added(Delivery form): a button: Save as a new Order (aka "duplicate the existing order")

--- a/assets/css/utils.scss
+++ b/assets/css/utils.scss
@@ -35,6 +35,10 @@
   padding: 0;
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 @keyframes rotating {
   from {
     transform: rotate(0deg);
