--- a/templates/delivery/form.html.twig
+++ b/templates/delivery/form.html.twig
@@ -116,11 +116,16 @@
         </div>
       {% endif %}
     </div>
-    <div class="col-md-5">
-      <button id="delivery-submit" type="submit" class="btn btn-block btn-lg btn-primary h-100">
+    <div class="col-md-5 delivery__form__buttons">
+      <div class="d-flex justify-content-center">
         <i class="fa fa-spinner fa-spin hidden" id="loader"></i>
+      </div>
+      <button id="delivery-submit" type="submit" class="btn btn-block btn-lg btn-primary">
         {% trans %}basics.save{% endtrans %}
       </button>
+      {% if form.saveAsNew is defined %}
+        {{ form_widget(form.saveAsNew) }}
+      {% endif %}
     </div>
   </div>
 
