changed(Delivery form): replace the button `Save as a new order` with  `Duplicate an order`

--- a/templates/delivery/form.html.twig
+++ b/templates/delivery/form.html.twig
@@ -117,14 +117,16 @@
       {% endif %}
     </div>
     <div class="col-md-5 delivery__form__buttons">
-      <div class="d-flex justify-content-center">
-        <i class="fa fa-spinner fa-spin hidden" id="loader"></i>
-      </div>
       <button id="delivery-submit" type="submit" class="btn btn-block btn-lg btn-primary">
+        <i class="fa fa-spinner fa-spin hidden" id="loader"></i>
         {% trans %}basics.save{% endtrans %}
       </button>
-      {% if form.saveAsNew is defined %}
-        {{ form_widget(form.saveAsNew) }}
+      {% if is_granted('ROLE_DISPATCHER') and not is_new and delivery.order is not empty %}
+        <a href="{{ path('admin_store_delivery_new',
+          { id: delivery.store.id, fromOrder: delivery.order.id }
+        ) }}" class="btn btn-block btn-lg btn-secondary">
+          {% trans %}orders.duplicate{% endtrans %}
+        </a>
       {% endif %}
     </div>
   </div>
