--- a/js/app/dashboard/dashboard.scss
+++ b/js/app/dashboard/dashboard.scss
@@ -17,7 +17,7 @@ html, body {
 }
 
 .content {
-  height: calc(100% - 50px);
+  height: calc(100vh - ($navbar-height));
 }
 
 .dashboard {
@@ -31,10 +31,8 @@ html, body {
     display: flex;
     flex: 1;
     width: 100%;
-    height: 100vh;
-  }
-  &--nav &__wrapper {
-    height: calc(100vh - 50px);
+    flex-direction: column;
+    height: 100%;
   }
 
   &__map, &__aside, &__map-container {
@@ -56,10 +54,16 @@ html, body {
 
   &__toolbar-container {
     width: 100%;
+    height: $navbar-height;
     .navbar {
+      height: $navbar-height;
       margin-bottom: 0;
       border-radius: 0;
     }
+  }
+
+  &__content {
+    height: calc(100vh - 2 * ($navbar-height));
   }
 
   &__loader {
@@ -105,22 +109,71 @@ html, body {
       overflow: auto;
     }
 
-    &__search {
-      position: absolute;
-      max-height: 100%;
-      height: 100%;
-      left: 0;
-      right: 0;
-      transform: translateY(100%);
-      transition: transform 0.4s;
-      background-color: #fff;
-      &--on {
-        transform: translateY(0);
-      }
+    &__search-nav {
+      position: relative;
     }
 
     &__search-box {
-      padding: 15px;
+      margin: ($navbar-height - $input-height-small) / 2 0;
+      display: inline-block;
+
+      &__input-wrapper {
+        display: flex;
+        position: relative;
+        line-height: $input-height-small;
+        height: $input-height-small;
+
+        input {
+          text-indent: $input-height-small;
+          padding-right: $input-height-small;
+          &--addon {
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
+          }
+        }
+
+        &:before {
+          font-family: 'FontAwesome';
+          content: '\F002';
+          color: white;
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: 0;
+
+          font-size: $font-size-base;
+          text-align: center;
+          width: $input-height-small;
+          line-height: $input-height-small;
+          background-color: $main-blue;
+
+          border-top-left-radius: $input-border-radius;
+          border-bottom-left-radius: $input-border-radius;
+        }
+      }
+
+      &__clear {
+        position: absolute;
+        right: 0;
+        top: 0;
+        border: none;
+        background-color: transparent;
+        // font-size: $font-size-large;
+        cursor: pointer;
+        height: 100%;
+        width: $input-height-base;
+      }
+    }
+
+    &__search-results {
+      position: absolute;
+      right: 0;
+      z-index: 2000;
+      padding: $base-margin-s;
+      max-height: calc(100vh / 3);
+      overflow-y: scroll;
+      background-color: white;
+      width: 300px;
     }
 
   }
