--- a/templates/delivery/form.html.twig
+++ b/templates/delivery/form.html.twig
@@ -121,7 +121,7 @@
         <i class="fa fa-spinner fa-spin hidden" id="loader"></i>
         {% trans %}basics.save{% endtrans %}
       </button>
-      {% if is_granted('ROLE_DISPATCHER') and not is_new and delivery.order is not empty %}
+      {% if is_granted('ROLE_ADMIN') and not is_new and delivery.order is not empty %}
         <a href="{{ path('admin_store_delivery_new',
           { id: delivery.store.id, frmrdr: delivery.order|hashid(16) }
         ) }}" class="btn btn-block btn-lg btn-secondary">
