--- a/templates/delivery/form.html.twig
+++ b/templates/delivery/form.html.twig
@@ -70,6 +70,11 @@
           {{ form_row(form.variantPrice) }}
           </div>
         {% endif %}
+
+        {% if form.bookmark is defined %}
+          <hr>
+          {{ form_row(form.bookmark) }}
+        {% endif %}
       </div>
     </div>
   </div>
