--- a/templates/_partials/delivery/list.html.twig
+++ b/templates/_partials/delivery/list.html.twig
@@ -130,6 +130,6 @@
 </table>
 {% else %}
   <p class="text-muted">
-  {% trans %}basics.no_entries{% endtrans %}
+    {{ empty_message|default('basics.no_entries')|trans }}
   </p>
 {% endif %}
