--- a/templates/public/order.html.twig
+++ b/templates/public/order.html.twig
@@ -97,31 +97,6 @@
 {% endblock %}
 
 {% block scripts %}
-
-{% set gateway = payment_gateway_resolver.resolve() %}
-{% set gateway_configs = {} %}
-{% set country = country_iso %}
-
-{% if gateway == 'stripe' %}
-<script type="text/javascript" src="https://js.stripe.com/v3/"></script>
-{% set gateway_configs = gateway_configs|merge({
-  stripe: {
-    publishableKey: coopcycle_setting('stripe_publishable_key'),
-    createPaymentIntentURL: path('stripe_create_payment_intent', { hashId: last_payment|hashid }),
-  }
-}) %}
-{% endif %}
-
-{% if gateway == 'mercadopago' %}
-<script src="https://sdk.mercadopago.com/js/v2"></script>
-{% set gateway_configs = gateway_configs|merge({
-  mercadopago: {
-    publishableKey: coopcycle_setting('mercadopago_test_publishable_key'),
-    country: country
-  }
-}) %}
-{% endif %}
-
 {{ encore_entry_script_tags('delivery-map') }}
 <script>
 new CoopCycle.DeliveryMap('map', {
@@ -131,15 +106,12 @@ new CoopCycle.DeliveryMap('map', {
 });
 </script>
 {% if payment_form is defined %}
-<script type="text/javascript" src="https://js.stripe.com/v3/"></script>
-<script type="text/javascript">
-new CoopCycle.PaymentForm(document.querySelector('form[name="checkout_payment"]'), {
-  card: "{{ gateway }}",
-  amount: {{ order.total }},
-  gatewayConfigs: {{ gateway_configs|json_encode|raw }},
-  tokenElement: document.querySelector('#checkout_payment_stripePayment_stripeToken'),
-  selectPaymentMethodURL: "{{ path('order_payment_select_method', { hashId: last_payment|hashid }) }}"
-});
+  {% include 'payment/scripts.html.twig' with {
+    order: order,
+    payment: last_payment,
+    payment_form_selector: 'form[name="checkout_payment"]',
+    token_element_selector: '#checkout_payment_stripePayment_stripeToken'
+  } %}
 </script>
 {% endif %}
 {% endblock %}
