--- a/templates/store/deliveries/new.html.twig
+++ b/templates/store/deliveries/new.html.twig
@@ -6,12 +6,10 @@
 
   <li><a href="{{ path(stores_route) }}">{% trans %}adminDashboard.stores.title{% endtrans %}</a></li>
   <li><a href="{{ path(store_route, { id: store.id }) }}">{{ store.name }}</a></li>
-
-  {% if delivery.id is not null %}
-  <li>#{{ delivery.id }}</li>
-  {% else %}
-  <li>{% trans %}delivery.createNew{% endtrans %}</li>
-  {% endif %}
+  <li>{% trans %}orders.new{% endtrans %}</li>
 
 {% endblock %}
 
+{% if is_granted('ROLE_DISPATCHER') %}
+  {% set title = 'orders.new'|trans %}
+{% endif %}
