fixed: template vars

--- a/templates/store/subscriptions/item.html.twig
+++ b/templates/store/subscriptions/item.html.twig
@@ -3,6 +3,8 @@
 {% block breadcrumb %}
 
   {% if is_granted('ROLE_DISPATCHER') %}
+    {% set store = delivery.store %}
+
     <li><a href="{{ path('admin_stores') }}">{% trans %}adminDashboard.stores.title{% endtrans %}</a></li>
     <li><a href="{{ path('admin_store', { id: store.id }) }}">{{ store.name }}</a></li>
     <li>{% trans %}subscriptions.title{% endtrans %}</li>
