feat: change warehouse menu icon

--- a/templates/admin/_partials/deliveries_nav.html.twig
+++ b/templates/admin/_partials/deliveries_nav.html.twig
@@ -98,7 +98,7 @@
     title: 'warehouses.breadcrumb' | trans,
     help: 'warehouses.breadcrumb.help' | trans,
     path: path('admin_warehouses'),
-    icon: 'bicycle',
+    icon: 'home',
     active: ['admin_warehouses'],
     enabled: is_granted('ROLE_ADMIN'),
   },
