clean: show highlighted task before incident 'background'
fix #4514

--- a/js/app/dashboard/dashboard.scss
+++ b/js/app/dashboard/dashboard.scss
@@ -338,7 +338,7 @@ html, body {
 }
 
 .task__highlighted {
-  background-color: $yellow!important;
+  background: $yellow!important;
 }
 
 .task__has-incidents {
