--- a/templates/order/payment.html.twig
+++ b/templates/order/payment.html.twig
@@ -34,7 +34,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="mb-4">
           <h4 class="bg-light p-3 m-0 mb-4">{% trans %}order.payment.title{% endtrans %}</h4>
           <div>
 
