added: test create delivery flow with createOrders enabled

--- a/templates/_partials/delivery/list.html.twig
+++ b/templates/_partials/delivery/list.html.twig
@@ -21,7 +21,7 @@
   {% for delivery in deliveries %}
     <tr data-testid="delivery__list_item">
       <td>
-        <a href="{{ path(routes.view, { id: delivery.id }) }}">#{{ delivery.id }}</a>
+        <a href="{{ path(routes.view, { id: delivery.id }) }}" data-testid="delivery_id">#{{ delivery.id }}</a>
       </td>
       {% if with_store is defined and with_store %}
       <td width="20%">
