--- a/templates/delivery/item.html.twig
+++ b/templates/delivery/item.html.twig
@@ -15,7 +15,7 @@
     {% set order = delivery.order %}
     {% if order is not null %}
       <li>{% trans %}adminDashboard.orders.title{% endtrans %}</li>
-      <li><a href="{{ path('admin_order', { id: order.id }) }}">{{ order.number }} (#{{ order.id }})</a></li>
+      <li><a href="{{ path('admin_order', { id: order.id }) }}" data-testid="order_id">{{ order.number }} (#{{ order.id }})</a></li>
     {% endif %}
 
     <li>{% trans %}adminDashboard.deliveries.title{% endtrans %}</li>
