feat: add the ability to tag packages

--- a/templates/form/package_set.html.twig
+++ b/templates/form/package_set.html.twig
@@ -30,7 +30,7 @@
         {{ form_row(form.shortCode) }}
       </div>
       <div class="col-md-1">
-        <a class="text-danger" style="position: relative; top: 30px;">
+        <a class="text-danger text-center" style="position: relative; top: 30px;">
           <i class="fa fa-2x fa-trash delete-package-entry"></i>
         </a>
       </div>
@@ -47,6 +47,9 @@
       </div>
       <div class="col-md-1">
         {{ form_row(form.maxVolumeUnits) }}
+      </div>
+      <div class="col-md-offset-2 col-md-6">
+        {{ form_row(form.tags, { 'attr': {'class': 'package_tags'}}) }}
       </div>
     </div>
   </div>
