--- a/templates/admin/package_set.html.twig
+++ b/templates/admin/package_set.html.twig
@@ -29,23 +29,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script>
-var $packagesList = $('#package_set_packages');
-$('#package_set_packages_add').on('click', function (e) {
-  var counter = $packagesList.data('widget-counter') || $packagesList.children().length;
-  var newWidget = $packagesList.attr('data-prototype');
-  newWidget = newWidget.replace(/__name__/g, counter);
-  counter++;
-  $packagesList.data('widget-counter', counter);
-  var newElem = $(newWidget);
-  newElem.appendTo($packagesList);
-});
-$('.delete-package-entry').on('click', function (e) {
-  var parent = $(e.target).closest('.package-entry')
-  var counter = $packagesList.data('widget-counter') || $packagesList.children().length;
-  counter--;
-  $packagesList.data('widget-counter', counter);
-  parent.remove();
-})
-</script>
+  {{ encore_entry_script_tags('package-set-form') }}
 {% endblock %}
