clean: add translation strings

--- a/templates/form/package_set.html.twig
+++ b/templates/form/package_set.html.twig
@@ -31,7 +31,7 @@
       </div>
       <div class="col-md-1">
         <a class="text-danger text-center" style="position: relative; top: 30px;">
-          <i class="fa fa-2x fa-trash delete-package-entry"></i>
+          <i class="fa fa-trash delete-package-entry"></i>
         </a>
       </div>
     </div>
@@ -48,7 +48,7 @@
       <div class="col-md-1">
         {{ form_row(form.maxVolumeUnits) }}
       </div>
-      <div class="col-md-offset-2 col-md-6">
+      <div class="col-md-offset-1 col-md-5">
         {{ form_row(form.tags, { 'attr': {'class': 'package_tags'}}) }}
       </div>
     </div>
