--- a/templates/store/layout.html.twig
+++ b/templates/store/layout.html.twig
@@ -9,7 +9,7 @@
 {% endif %}
 
   <div class="row">
-    <div class="col-sm-3">
+    <div data-testid="sidenav" class="col-sm-3">
       {% if form is defined and form.imageFile is defined %}
         {{ form_row(form.imageFile) }}
       {% else %}
@@ -52,7 +52,7 @@
           </a>
         </li>
         <li role="presentation">
-          <a href="{{ path('admin_store_deliveries_bookmarks', { id: store.id }) }}">
+          <a data-testid="bookmarks" href="{{ path('admin_store_deliveries_bookmarks', { id: store.id }) }}">
             {{ 'stores.deliveries.bookmarks'|trans }}
           </a>
         </li>
