clean: store weights as gram in the DB

--- a/templates/form/package_set.html.twig
+++ b/templates/form/package_set.html.twig
@@ -23,7 +23,7 @@
         <span class="form-inline d-inline-block">
           {{ form_label(form.name) }}<i class="text-danger">*</i> {{ form_widget(form.name) }}
         </span>
-        <a class="ml-2 text-muted collapse-trigger">Expand/hide</span>
+        <a class="ml-2 collapse-trigger">{{'form.package.enter_details'|trans}}</span>
         <a class="text-danger text-center pull-right mr-2">
           <i class="fa fa-trash delete-package-entry"></i>
         </a>
